@@ -1,3 +1,4 @@
+* BUG#7497 Now set the right report functional date into the report context
 * BUG#7473 Treat contracts in contract_set in the same renewal task in batch processing
 * BUG#7412 Allow to renew contract in contract set if the other is not active
 
